add top lvl `jobs` config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,9 @@
 version: 2.0
 
-build:
-  docker:
-    # specify the version you desire here
-    - image: circleci/node:8
+jobs:
+  build:
+    docker:
+      - image: circleci/node:8
 
     steps:
       - checkout
